@@ -1,6 +1,12 @@
 # ChangeLog for dev-ml/ocaml-data-notation
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/ocaml-data-notation/ChangeLog,v 1.1 2011/03/15 20:18:57 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/ocaml-data-notation/ChangeLog,v 1.2 2011/05/24 14:00:53 aballier Exp $
+
+*ocaml-data-notation-0.0.4 (24 May 2011)
+
+  24 May 2011; Alexis Ballier <aballier@gentoo.org>
+  +ocaml-data-notation-0.0.4.ebuild:
+  version bump
 
 *ocaml-data-notation-0.0.3 (15 Mar 2011)
 
